<resources>
    <string name="app_name">IQ Challenge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beginner">Beginner</string>
    <string name="beginner_age">Age: 5–10</string>
    <string name="middle">Middle</string>
    <string name="middle_age">Age: 11–20</string>
    <string name="pro">Pro</string>
    <string name="pro_age">Age: 21+</string>
    <string name="login">Ismingiz</string>
    <string name="username">Ism</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="phone">Phone</string>
    <string name="rating_list">Rating list</string>
    <string name="congratulations">Congratulations</string>
    <string name="your_iq">Your IQ</string>
    <string name="iq">142</string>
    <string name="time">Time</string>
    <string name="time_text">32:25</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="home">Home</string>
    <string name="retry">Retry</string>
    <string name="finish">Finish</string>
    <string name="question">Question</string>
</resources>