<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:drawableLeftCompat="@drawable/im_logo"
        app:fontFamily="@font/righteous" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="48sp"
            app:fontFamily="@font/righteous" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/input_stroke"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="10dp"
            android:fontFamily="@font/righteous"
            android:hint="@string/username"
            android:maxLines="1"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:background="@drawable/input_stroke"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:fontFamily="@font/righteous"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:visibility="gone"
            android:maxLines="1"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:fontFamily="@font/righteous"
            android:text="@string/register"
            android:textSize="14sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/righteous"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</FrameLayout>