<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/result_shape"
    android:orientation="vertical"
    tools:context=".ui.ResultFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/righteous"
                android:text="@string/congratulations"
                android:textColor="@color/white"
                android:textSize="44sp"
                app:autoSizeMaxTextSize="44sp"
                app:autoSizeMinTextSize="20sp"
                app:autoSizeTextType="uniform" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/im_cup" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bottom_sheet"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:fontFamily="@font/righteous"
                android:text="@string/your_iq"
                android:textColor="@color/silver"
                android:textSize="24sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/iq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/righteous"
                android:includeFontPadding="false"
                android:text="@string/iq"
                android:textColor="@color/black"
                android:textSize="64sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/righteous"
                android:text="@string/time"
                android:textColor="@color/silver"
                android:textSize="20sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/righteous"
                android:text="@string/time_text"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/leaderboard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/im_to_leader_board" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/righteous"
                        android:text="@string/leaderboard"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/retry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/im_retry" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/righteous"
                        android:text="@string/retry"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/im_home" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/righteous"
                        android:text="@string/home"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/konfettiView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>