<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/im_logo"
            app:fontFamily="@font/righteous" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/leader_board"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_leader_board" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/beginner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/beginner"
        app:cardCornerRadius="20dp"
        app:strokeColor="@android:color/transparent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/beginner_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/beginner"
                android:textColor="@color/white"
                android:textSize="48sp"
                app:fontFamily="@font/righteous"
                tools:ignore="RelativeOverlap" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/beginner_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/beginner_title"
                android:layout_marginHorizontal="16dp"
                android:text="@string/beginner_age"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:fontFamily="@font/righteous" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/im_beginner" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/middle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/middle"
        app:cardCornerRadius="20dp"
        app:strokeColor="@android:color/transparent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/middle_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/middle"
                android:textColor="@color/white"
                android:textSize="48sp"
                app:fontFamily="@font/righteous"
                tools:ignore="RelativeOverlap" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/middle_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/middle_title"
                android:layout_marginHorizontal="16dp"
                android:text="@string/middle_age"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:fontFamily="@font/righteous" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/im_middle" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pro"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/pro"
        app:cardCornerRadius="20dp"
        app:strokeColor="@android:color/transparent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/pro_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/pro"
                android:textColor="@color/white"
                android:textSize="48sp"
                app:fontFamily="@font/righteous"
                tools:ignore="RelativeOverlap" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/pro_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pro_title"
                android:layout_marginHorizontal="16dp"
                android:text="@string/pro_age"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:fontFamily="@font/righteous" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/im_pro" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>


</LinearLayout>