<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".ui.QuizFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:drawableLeftCompat="@drawable/im_logo"
                app:fontFamily="@font/righteous" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/finish"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="10dp"
                android:text="@string/finish"
                android:textColor="@color/red"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <com.robinhood.ticker.TickerView
            android:id="@+id/ticker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="48sp"
            app:ticker_animationDuration="500"
            app:ticker_defaultCharacterList="number"
            tools:text="40:00" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/shape_20"
            android:elevation="2dp"
            android:orientation="vertical"
            android:padding="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/question_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10/40"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/question_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/left_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/answer_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/answer_button"
                    android:button="@android:color/transparent"
                    android:elevation="2dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textColor="@color/answer_text_color"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/answer_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/answer_button"
                    android:button="@android:color/transparent"
                    android:elevation="2dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textColor="@color/answer_text_color"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/answer_e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/answer_button"
                    android:button="@android:color/transparent"
                    android:elevation="2dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textColor="@color/answer_text_color"
                    android:textSize="16sp" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/right_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/answer_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/answer_button"
                    android:button="@android:color/transparent"
                    android:elevation="2dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textColor="@color/answer_text_color"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/answer_d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/answer_button"
                    android:button="@android:color/transparent"
                    android:elevation="2dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textColor="@color/answer_text_color"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/answer_F"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/answer_button"
                    android:button="@android:color/transparent"
                    android:elevation="2dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textColor="@color/answer_text_color"
                    android:textSize="16sp" />
            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/previous"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/shape_20"
                android:backgroundTint="@color/middle"
                android:visibility="gone">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/ic_back" />
            </FrameLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <FrameLayout
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/shape_20"
                android:backgroundTint="@color/middle">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:rotation="180"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/ic_back" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>